# piano_midi_tools

./: .gitignore  LICENSE  README.md  colorpicker.py  main.py  pyproject.toml  test.py
.github/workflows/: unit-tests.yml
piano_midi/: color_picker.py  key_picker.py  key_press_detector.py  key_sequence_writer.py  midi_writer.py  models.py  piano_state.py  time_slicer.py  video_capture.py
tests/: test_models.py  test_piano_state.py
